<resources>
    <string name="app_name">Aplikasi GitHub User</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="github">Github</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="exit">Exit</string>
    <string name="description">Description</string>
    <string name="user">Username</string>
    <string name="imageViewDescription">imageViewDescription</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="name">Name</string>
    <string name="tabName">This is tab</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="tap_and_type_for_search_user">Tap and type for search user</string>
    <string name="search_hint">Enter username</string>
    <string name="tabLayout">Tab Layout</string>
    <string name="blank">------</string>
    <string name="repository">Repository</string>
    <string name="favorite">favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>