<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/favoriteMenu"
            android:icon="@drawable/ic_favorite_active"
            android:title="@string/tabLayout"
            app:showAsAction="always" />
        <item
            android:id="@+id/settingMenu"
            android:icon="@drawable/ic_baseline_settings_white_24"
            android:title="@string/setting"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/setting"
                    android:title="@string/setting"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/exit"
                    android:title="@string/exit"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
</menu>