<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_collapseMode="parallax">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/buttonFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/description"
                    android:focusable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageProfile"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_favorite_border"
                    tools:ignore="ImageContrastCheck" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/imageViewDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.069"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@tools:sample/avatars" />

                <ProgressBar
                    android:id="@+id/progressBarAvatar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
                    app:layout_constraintEnd_toEndOf="@+id/imageProfile"
                    app:layout_constraintStart_toStartOf="@+id/imageProfile"
                    app:layout_constraintTop_toTopOf="@+id/imageProfile"
                    tools:visibility="visible" />

                <ProgressBar
                    android:id="@+id/progressBarUsername"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/userName"
                    app:layout_constraintStart_toStartOf="@+id/userName"
                    app:layout_constraintTop_toTopOf="@+id/userName"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/blank"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

                <ProgressBar
                    android:id="@+id/progressBarName"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/name"
                    app:layout_constraintStart_toStartOf="@+id/name"
                    app:layout_constraintTop_toTopOf="@+id/name"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/blank"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.676"
                    app:layout_constraintStart_toEndOf="@+id/userName"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

                <ProgressBar
                    android:id="@+id/progressBarRepository"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    app:layout_constraintEnd_toEndOf="@+id/repository"
                    app:layout_constraintStart_toStartOf="@+id/repository"
                    app:layout_constraintTop_toTopOf="@+id/repository"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/repository"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="12dp"
                    android:maxLines="3"
                    android:text="@string/repository"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userName" />

                <ProgressBar
                    android:id="@+id/progressBarFollower"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/followers"
                    app:layout_constraintStart_toStartOf="@+id/followers"
                    app:layout_constraintTop_toTopOf="@+id/followers"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="46dp"
                    android:maxLines="3"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/repository"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

                <ProgressBar
                    android:id="@+id/progressBarFollowing"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/following"
                    app:layout_constraintStart_toStartOf="@+id/following"
                    app:layout_constraintTop_toTopOf="@+id/following"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/following"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:maxLines="3"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/followers"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <ProgressBar
                    android:id="@+id/progressBarLocation"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/location"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/location"
                    app:layout_constraintTop_toTopOf="@+id/location"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:maxLines="3"
                    android:text="@string/blank"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/company"
                    app:layout_constraintHorizontal_bias="0.318"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvCompany"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repository" />

                <ProgressBar
                    android:id="@+id/progressBarCompany"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:indeterminate="true"
                    android:indeterminateDuration="500"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@+id/company"
                    app:layout_constraintStart_toStartOf="@+id/company"
                    app:layout_constraintTop_toTopOf="@+id/company"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:maxLines="3"
                    android:text="@string/blank"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/location"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/company"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvLocation"
                    app:layout_constraintTop_toBottomOf="@+id/following" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/progressBarGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="progressBarAvatar,progressBarUsername,progressBarLocation,progressBarCompany,progressBarName,progressBarFollowing,progressBarFollower,progressBarRepository"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="35dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tabLayout"
            app:layout_constraintBottom_toTopOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/tabName"
                android:fitsSystemWindows="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabs" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>